# ChangeLog for dev-python/PyQt4
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/PyQt4/ChangeLog,v 1.71 2009/07/14 19:29:14 hwoarang Exp $

*PyQt4-4.5.2 (14 Jul 2009)

  14 Jul 2009; Markos Chandras <hwoarang@gentoo.org> +PyQt4-4.5.2.ebuild:
  Version bump

  09 Jul 2009; Ferris McCormick <fmccor@gentoo.org> PyQt4-4.4.4-r5.ebuild:
  Sparc stable, Bug #276852.

  08 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  PyQt4-4.4.4-r5.ebuild:
  stable x86, bug 276852

  08 Jul 2009; Jeroen Roovers <jer@gentoo.org> PyQt4-4.4.4-r5.ebuild:
  Stable for HPPA (bug #276852).

  28 Jun 2009; Markos Chandras <hwoarang@gentoo.org> -PyQt4-4.5.ebuild:
  Remove old ebuild

  20 Jun 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  PyQt4-4.5.1.ebuild:
  Don't install modules specific for other versions of Python (bug #274499).

  16 Jun 2009; Markos Chandras <hwoarang@gentoo.org> PyQt4-4.5.1.ebuild:
  Raise sip dependency to 4.8.1

*PyQt4-4.5.1 (16 Jun 2009)

  16 Jun 2009; Markos Chandras <hwoarang@gentoo.org> PyQt4-4.4.4-r5.ebuild,
  PyQt4-4.5.ebuild, +PyQt4-4.5.1.ebuild:
  Drop qt3support use flag. Version bump. Bug-fix release

  09 Jun 2009; Markos Chandras <hwoarang@gentoo.org> PyQt4-4.4.4-r2.ebuild,
  PyQt4-4.4.4-r4.ebuild, PyQt4-4.4.4-r5.ebuild:
  Add correct sip dependencies, fixes bug 273430

*PyQt4-4.5 (09 Jun 2009)

  09 Jun 2009; Markos Chandras <hwoarang@gentoo.org> +PyQt4-4.5.ebuild:
  Version bump

  05 Jun 2009; Ben de Groot <yngwin@gentoo.org> PyQt4-4.4.4-r5.ebuild:
  Specify !kde for qt-phonon dep

  03 Jun 2009; Ben de Groot <yngwin@gentoo.org> PyQt4-4.4.4-r5.ebuild,
  metadata.xml:
  Add kde useflag, for selecting media-sound/phonon, bug 270188

  02 Jun 2009; Ben de Groot <yngwin@gentoo.org> PyQt4-4.4.4-r5.ebuild:
  QtDesigner is triggered by USE=X, so hide sed behind X useflag. Thanks
  to Davide Pesavento for alerting.
