@@ -3,12 +3,9 @@ AUX PyQt4-4.4_compile.patch 883 RMD160 016122f1e9cbf8c74da760fd094e280fd5ec0257 
 AUX configure.py.patch 1727 RMD160 31802058d0b0488264cdbcfeebd7ce9aff250957 SHA1 df4fee27f1486422b25d0072cfc388b207814c8f SHA256 06ee44a9fe43615b6bfada4aa7294303c016fd7c378ddf537823e33546306926
 AUX fix_license_check.patch 643 RMD160 f8934e527bb8bf4f9edf98e068c07fc7b3380d97 SHA1 41fa9b3962add04c8196695c9d9b82b69d7d3ea8 SHA256 117025432a5db37375554577c66edbe7a6fdef6e120fb865b2f4304961dc2c42
 DIST PyQt-x11-gpl-4.4.4.tar.gz 6982063 RMD160 970bca082a93402b1986b4e8a14738575732e8ae SHA1 6b91a8020de10e807fa0d3db6b7a92029a17cf0b SHA256 fc09c13b340078c7995fb2b6450c5b7de8ef9411962d311a1213e773c936509a
-DIST PyQt-x11-gpl-4.5.1.tar.gz 6942490 RMD160 ef0ace225b66d21aa83106364850cfa960e67705 SHA1 b50b58c3e6f9a15e0986fe63d978eb85db363a46 SHA256 5ec778056dcbbd5078d696e7407ba6274c1e8dab9b7778c2bb158a29a0b96bfe
 DIST PyQt-x11-gpl-4.5.2.tar.gz 6970308 RMD160 3c4f507d098153d5a7be96f0a523bcc4b750f53c SHA1 25d41d489fae521e26797b797137e069af13c2ae SHA256 2588c67d29c2d56e50cfedafb9449000bff03edfcca2b23be38ebf6fe194494d
 EBUILD PyQt4-4.4.4-r2.ebuild 2057 RMD160 c53d76a3cc8a0b39b167ee0f95b375d10ec64bcb SHA1 cd4c7d73f4be8fd082a8ebd95ab29ea2a4482f9c SHA256 62846add2eeae19473391d0c5fa172dd3f227b3f65d830854cb04667dd9d57c7
-EBUILD PyQt4-4.4.4-r4.ebuild 2222 RMD160 7f1407cbeba80d9b44408fe5d1efc1bd266fb8d7 SHA1 cd3e2704b54c9a4986335f59330be25042b492c6 SHA256 9ca1ac983bb4112e2fa88d5b48bc7d3c29a6a79162173a48c8561d7700f834f0
 EBUILD PyQt4-4.4.4-r5.ebuild 3018 RMD160 121c4bac3511e0884ea67caaf78ca078df8a51ac SHA1 5ab4d30c7c5cba47e5b6afae22eb1cc1bdab0ca0 SHA256 06925bbb46314be7d4cc68e294b57e8e4b01baa0fbab2c0d489c2a6bf02e1e57
-EBUILD PyQt4-4.5.1.ebuild 3212 RMD160 86e26d4466d97bbd3ee645ef3970a459eebd9951 SHA1 f2647be331a3ae458dd21f0dca40d6526d1edf25 SHA256 39d29da8c4a1ecbdbbc21bc6566c06b47206a192afbd990c1516ed07a886d386
 EBUILD PyQt4-4.5.2.ebuild 3173 RMD160 8dc1fe362621b1f1eaa04769bea19f4643c2af95 SHA1 94f78aabbe3f9bf08753270ff4fb5af2c25f2bc5 SHA256 c92953611c34214330a63891d3d9a8cdfa9ae09978960e45d20cabc0650d680d
-MISC ChangeLog 9741 RMD160 669fb1c16991c0e7c1b98fa119eab88b8fcea644 SHA1 824ae9f6f8c2bff56580c8a0624133d540811576 SHA256 8777781051112893925a798b4f1c562e0f2bca99dfdbe80de53d26b521e36c67
+MISC ChangeLog 9863 RMD160 524518556afad88e06fb33fa0f1091b6dbdb3c28 SHA1 0fb857df5805eb51e304c6a6d4a86324293055c0 SHA256 b3793db62fb9e50e0d9aea4ef737e3fd647b4b0837f68de34e0c5f518eab6e11
 MISC metadata.xml 859 RMD160 3da7dcc5dc212af8ed4f98e73c561f2365081c98 SHA1 f607feed53689fa15b62d474d6763bc674fbcb2a SHA256 00475be82d27e0e1dab95eafcea3751ae70ee39b53a268063772d76752556d8b
