@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/PyQt4
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/PyQt4/ChangeLog,v 1.71 2009/07/14 19:29:14 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/PyQt4/ChangeLog,v 1.72 2009/07/17 07:07:19 hwoarang Exp $
+
+  17 Jul 2009; Markos Chandras <hwoarang@gentoo.org> -PyQt4-4.4.4-r4.ebuild,
+  -PyQt4-4.5.1.ebuild:
+  Remove old ebuilds
 
 *PyQt4-4.5.2 (14 Jul 2009)
 
